# 4-bit

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: docs.yml
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  QUALITY-CHECKLIST.md  ROADMAP.md  TROUBLESHOOTING.md
docs/emulators/: i4001-signals.txt  i4002-signals.txt  i4003-signals.txt  license.txt  mcs4_net_sample_x64.bat  readme.txt  sample.asm  sample.hex
docs/meta/: registry.yaml
mcs4-emu/: Cargo.toml  INSTALLATION.md  STATUS.md
mcs4-emu/crates/mcs4-bus/: Cargo.toml
mcs4-emu/crates/mcs4-bus/src/: clock.rs  control.rs  cycle.rs  data_bus.rs  lib.rs
mcs4-emu/crates/mcs4-chips/: Cargo.toml
mcs4-emu/crates/mcs4-chips/benches/: cpu_bench.rs
mcs4-emu/crates/mcs4-chips/src/: disasm.rs  i4001.rs  i4002.rs  i4003.rs  i4101.rs  i4201.rs  i4289.rs  i4308.rs  lib.rs  simd.rs
mcs4-emu/crates/mcs4-chips/src/i4004/: alu.rs  instruction_decode.rs  mod.rs  registers.rs  timing_io.rs
mcs4-emu/crates/mcs4-chips/src/i4040/: instruction_decode.rs  interrupt.rs  mod.rs  registers.rs  stack.rs
mcs4-emu/crates/mcs4-core/: Cargo.toml
mcs4-emu/crates/mcs4-core/src/: gate.rs  lib.rs  signal.rs  simulator.rs  timing.rs  transistor.rs  wire.rs
mcs4-emu/crates/mcs4-fpga/: Cargo.toml
mcs4-emu/crates/mcs4-fpga/src/: lib.rs  verilog.rs
mcs4-emu/crates/mcs4-gui/: Cargo.toml
mcs4-emu/crates/mcs4-gui/src/: lib.rs  main.rs  signal_trace.rs  waveform.rs
mcs4-emu/crates/mcs4-gui/src/panels/: waveform.rs
mcs4-emu/crates/mcs4-system/: Cargo.toml
mcs4-emu/crates/mcs4-system/src/: lib.rs  mcs4.rs  mcs40.rs
scripts/: doc_sync.sh  doc_validate.sh  link_check.sh  md_lint.sh  md_validate.sh
