[workspace]
resolver = "2"
members = [
    "crates/mcs4-core",
    "crates/mcs4-bus",
    "crates/mcs4-chips",
    "crates/mcs4-system",
    "crates/mcs4-gui",
    "crates/mcs4-fpga",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Oichkatzelesfrettschen/4-bit"
authors = ["Oichkatzelesfrettschen"]

[workspace.dependencies]
# Simulation
ordered-float = "4.2"

# Collections
indexmap = "2.2"
smallvec = "1.13"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# GUI
egui = "0.29"
eframe = "0.29"

# FPGA/HDL
# TODO: Evaluate kaze, calyx, or custom Verilog emission

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
