[package]
name = "mcs4-bus"
description = "MCS-4/MCS-40 bus infrastructure and protocol implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mcs4-core = { path = "../mcs4-core" }
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
