[package]
name = "mcs4-chips"
description = "MCS-4/MCS-40 chip implementations (4004, 4040, 4001, 4002, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
simd = []

[dependencies]
bitflags = "2"
modular-bitfield = "0.11"
tinyvec = { version = "1", features = ["alloc"] }
smallvec = "1"
mcs4-core = { path = "../mcs4-core" }
mcs4-bus = { path = "../mcs4-bus" }
tracing.workspace = true

[dev-dependencies]
criterion = "0.5"
proptest.workspace = true

[[bench]]
name = "cpu_bench"
harness = false
