[package]
name = "mcs4-core"
description = "Core simulation primitives for MCS-4/MCS-40 gate-level emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ordered-float.workspace = true
indexmap.workspace = true
smallvec.workspace = true
serde = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = []
serde = ["dep:serde"]
