[package]
name = "mcs4-system"
description = "Complete MCS-4/MCS-40 system assembly"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcs4-core = { path = "../mcs4-core" }
mcs4-bus = { path = "../mcs4-bus" }
mcs4-chips = { path = "../mcs4-chips" }
tracing.workspace = true
